@@ -1,5 +1,10 @@
 2010-02-12
 
+	* src/compose.c: compose_change_spell_lang_menu(): force selection of
+	  currently selected item to update compose->spell_lang.
+
+2010-02-12
+
 	* src/compose.c: Preserve PGP settings saving and loading drafts
 	  (thanks to Antonio).
 
